1.修改端口为80 2.增加欢迎页面 3.修改彩票数据库中的期号类型为int，方便排序查找

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=lotter
 spring.data.mongodb.username=test
 spring.data.mongodb.password=Test123456
+server.port=80
