--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.8</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
