--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.host=118.89.156.154
+spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=lotter
+spring.data.mongodb.database=lottery
 spring.data.mongodb.username=test
 spring.data.mongodb.password=Test123456
-server.port=80
+server.port=8080
